crates/apollo-compiler/test_data/diagnostics/0031_input_object_with_duplicate_fields.txt
Error: duplicate definitions for the `x` field of input object type `Point2D`
    ╭─[ 0031_input_object_with_duplicate_fields.graphql:10:3 ]
    │
  9 │   x: Float
    │   ┬  
    │   ╰── previous definition of `x` here
 10 │   x: Float
    │   ────┬───  
    │       ╰───── `x` redefined here
────╯

